--- a/src/app/CmakeLists.txt
+++ b/src/app/CmakeLists.txt
@@ -6,15 +6,16 @@ add_executable(${PROJECT_NAME} main.f90)
 
 # Add module directory to include path
 target_include_directories(${PROJECT_NAME}
-    PRIVATE ${CMAKE_Fortran_MODULE_DIRECTORY}
+  PRIVATE ${CMAKE_Fortran_MODULE_DIRECTORY}
 )
 
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE
-    myutils
+  PRIVATE
+  myutils
+  myupdate
 )
 
 # Don't compile module files directly, rely on myutils library
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    Fortran_MODULE_DIRECTORY ""
+  Fortran_MODULE_DIRECTORY ""
 )
